--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.3.9",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "jshint": "^2.10.2",
     "register-service-worker": "^1.6.2",
