--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "ant-design-vue": "^1.3.9",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "fetch-intercept": "^2.3.1",
     "jshint": "^2.10.2",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
@@ -28,6 +30,9 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "lint-staged": "^8.1.5",
+    "node-sass": "^4.12.0",
+    "sass": "^1.20.3",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
