--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "fetch-intercept": "^2.3.1",
     "jshint": "^2.10.2",
     "register-service-worker": "^1.6.2",
+    "reqwest": "^2.0.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-waterfall": "^1.0.6",
     "vuex": "^3.0.1",
     "whatwg-fetch": "^3.0.0"
   },
