--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^12.2.0",
+    "@ckeditor/ckeditor5-dev-utils": "^12.0.1",
+    "@ckeditor/ckeditor5-dev-webpack-plugin": "^8.0.1",
+    "@ckeditor/ckeditor5-theme-lark": "^14.0.0",
+    "@ckeditor/ckeditor5-vue": "^1.0.0-beta.2",
     "ant-design-vue": "^1.3.9",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
@@ -32,6 +37,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "lint-staged": "^8.1.5",
+    "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.12.0",
     "sass": "^1.20.3",
     "sass-loader": "^7.1.0",
